Fixed a few bugs and added test 1